# swiper

./: .gitignore  Cargo.toml  README.md  flake.nix
core/swiper/: Cargo.toml
core/swiper/src/: lib.rs
core/swiper_derive/: Cargo.toml
core/swiper_derive/src/: lib.rs
core/swiper_proxy/: Cargo.toml
core/swiper_proxy/src/: lib.rs
core/swiper_stealing/: Cargo.toml  README.md
core/swiper_stealing/src/: lib.rs  lib.rsQmAzSh.bck  requirement.rs  thief.rs
design/: motivation.md
src/: lib.rs
