[package]
name = "swiper"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
swiper-stealing = { workspace = true }
swiper-derive = { workspace = true }

[dev-dependencies]
lite-async-test = { workspace = true }
futures-lite = { workspace = true }
