[package]
name = "swiper-stealing"
description = "placeholder for async task managemenet library"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
futures-lite = { workspace = true }

[features]
default = ["std"]
std = []
